tests/invalid-syntax/46494_semantic_error_2/wrong_argument_type.agu
-- 46494, Leonor Figueirinhas

let power (x) : Int -> Int = x * x

let _ Unit =
    print(power("erro"))